--- a/public/index.html
+++ b/public/index.html
@@ -18,5 +18,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     
+    <script src="https://maps.googleapis.com/maps/api/geocode/json?address=1600+Amphitheatre+Parkway,
+    +Mountain+View,+CA&key=AIzaSyBxZQL4C_W3OX1CkfJSTEC70CXlEGoQeuI"></script>
   </body>
 </html>
