--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,15 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X1HD3W2FKX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-X1HD3W2FKX');
+    </script>
     <title>Country Details Map App - Gimna Katugampala Production</title>
   </head>
   <body>
